--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "zerodha-clone",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-   "scripts": {
-    "start": "node index.js"
-  },
+  "main": "backend/src/index.js",
+"scripts": {
+  "start": "node backend/src/index.js"
+},
   "keywords": [],
   "author": "",
   "license": "ISC"
