--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "zerodha-clone",
   "version": "1.0.0",
   "description": "",
-  "main": "backend/src/index.js",
+  "main": "backend/index.js",
 "scripts": {
-  "start": "node backend/src/index.js"
+  "start": "node backend/index.js"
 },
   "keywords": [],
   "author": "",
